Split regulation read and check to different endpoints
